Fix time internship

--- a/resume_en.tex
+++ b/resume_en.tex
@@ -147,7 +147,7 @@ billing.
   Methodology: Agile Scrum, 4/5 dev
 \stopitemize
 
-\startdescription{Feb. 15 - Aug. 16}
+\startdescription{Feb. - Aug. 16}
   {\bf Golang Development on
   \useURL[url7][https://traefik.io/][][Træfik]\from[url7]};
   \useURL[url8][https://containo.us/][][Containous]\from[url8] - Lyon
