Update but make not working

--- a/resume_en.tex
+++ b/resume_en.tex
@@ -67,28 +67,43 @@
 
 \starttext
 
-\section[martin-piegay]{Martin Piegay}
+\section[title={Martin Piegay},reference={martin-piegay}]
 
 \thinrule
 
 \startblockquote
-I am a young software engineer working in
-\useURL[url1][https://www.zenika.com/][][Zenika]\from[url1] Lyon (FR). I
-code in Java, JavaScript and Golang using several frameworks like Spring
-or ReactJS \ldots{} I feel concerned about quality of code and I do my
-best to improve it.\crlf
-I believe in open-source, I recently contributed to the new reverse
-proxy \useURL[url2][https://traefik.io/][][Træfik]\from[url2].
+I am a software engineer working in
+\useURL[url1][https://www.zenika.com/][][Zenika]\from[url1] Lyon (FR)
+since 2016. I code mainly in Java using several frameworks like Spring
+Boot \ldots{} I feel concerned about quality of code and I do my best to
+improve it. I recently getting interest about DevOps techno like CI/CD,
+Ansible, Kubernetes & Docker.
 \stopblockquote
 
 \thinrule
 
-\subsection[experience]{Experience}
+\subsection[title={Experience},reference={experience}]
 
-\startdescription{June 17 - Today}
+\startdescription{November 18 - Now}
+  {\bf Java Backend Development at
+  \useURL[url2][https://group.bnpparibas/communique-de-presse/partecis-bnp-paribas-natixis-renouvellent-partenariat-monetique-duree-12-ans][][Partecis]\from[url2]};
+  \useURL[url3][https://www.zenika.com/][][Zenika]\from[url3] Lyon (FR)
+\stopdescription
+
+Developing Java programs for payment aquisition from credit cards. That
+interfaces with payment terminals and bank's information systems using
+businnes protocols.
+
+\startitemize[packed]
+\item
+  Tech: Java 8, Spring Boot, Apache Camel, Netty, SQL/Oracle,
+  Prometheus, Apache Kafka, Maven, Git, Jenkins, Bitbucket, \ldots{}
+\stopitemize
+
+\startdescription{June 17 - November 18}
   {\bf Backend Software Development on Linkysup at
-  \useURL[url3][http://www.enedis.fr/compteur-communicant][][Enedis]\from[url3]};
-  \useURL[url4][https://www.zenika.com/][][Zenika]\from[url4] Lyon (FR)
+  \useURL[url4][http://www.enedis.fr/compteur-communicant][][Enedis]\from[url4]};
+  \useURL[url5][https://www.zenika.com/][][Zenika]\from[url5] Lyon (FR)
 \stopdescription
 
 Developing a software for monitoring and remote controlling 35 millions
@@ -105,9 +120,9 @@ of electricity meters installed at private individuals.
   60-coworkers project.
 \stopitemize
 
-\startdescription{Dec. 16 - June 17}
+\startdescription{Dec.~16 - June 17}
   {\bf Fullstack Software Development for Gattefosse};
-  \useURL[url5][https://www.zenika.com/][][Zenika]\from[url5] Lyon (FR)
+  \useURL[url6][https://www.zenika.com/][][Zenika]\from[url6] Lyon (FR)
 \stopdescription
 
 Developing from scratch a business website which allows clients to
@@ -128,9 +143,9 @@ manage medias, users, products and technical documents.
   Methodology: Agile Scrum, 3 dev, 1 devops, remote clients
 \stopitemize
 
-\startdescription{Sept. 16 - Dec. 17}
+\startdescription{Sept.~16 - Dec.~17}
   {\bf Fullstack Software Development for Grand Frais};
-  \useURL[url6][https://www.zenika.com/][][Zenika]\from[url6] Lyon (FR)
+  \useURL[url7][https://www.zenika.com/][][Zenika]\from[url7] Lyon (FR)
 \stopdescription
 
 Developing new features on the business specific software to manage
@@ -147,23 +162,23 @@ billing.
   Methodology: Agile Scrum, 4/5 dev
 \stopitemize
 
-\startdescription{Feb. - Aug. 16}
+\startdescription{Feb. - Aug.~16}
   {\bf Golang Development on
-  \useURL[url7][https://traefik.io/][][Træfik]\from[url7]};
-  \useURL[url8][https://containo.us/][][Containous]\from[url8] - Lyon
+  \useURL[url8][https://traefik.io/][][Træfik]\from[url8]};
+  \useURL[url9][https://containo.us/][][Containous]\from[url9] - Lyon
   (France)
 \stopdescription
 
 6-months end-of-courses internship on
-\useURL[url9][https://traefik.io/][][Træfik]\from[url9]. Developing 2
+\useURL[url10][https://traefik.io/][][Træfik]\from[url10]. Developing 2
 packages which provide configuration interfaces for Golang programs:
 
 \startitemize
 \item
-  \useURL[url10][https://github.com/containous/flaeg][][Flæg]\from[url10]:
+  \useURL[url11][https://github.com/containous/flaeg][][Flæg]\from[url11]:
   Dynamic Command Line Interface
 \item
-  \useURL[url11][https://github.com/containous/staert][][Stært]\from[url11]:
+  \useURL[url12][https://github.com/containous/staert][][Stært]\from[url12]:
   Reads, Merges and Store configurations
 \stopitemize
 
@@ -182,8 +197,8 @@ Tech:
 
 \startdescription{January 2015 - May 2015}
   {\bf Sysadmin development};
-  \useURL[url12][http://www.savediffusion.fr/][][SAVE
-  Diffusion]\from[url12] - Saint-Etienne (France)
+  \useURL[url13][http://www.savediffusion.fr/][][SAVE
+  Diffusion]\from[url13] - Saint-Etienne (France)
 \stopdescription
 
 Development of a network monitoring service (Shinken/Nagios) for a radio
@@ -197,20 +212,20 @@ studio network.
   Methodology: Working in 4 students team. AGILE approach.
 \stopitemize
 
-\subsection[education]{Education}
+\subsection[title={Education},reference={education}]
 
 \startdescription{2013 - 2016}
   {\bf Engineering degree};
-  \useURL[url13][https://www.telecom-st-etienne.fr/][][Télécom
-  Saint-Étienne]\from[url13] (FR)
+  \useURL[url14][https://www.telecom-st-etienne.fr/][][Télécom
+  Saint-Étienne]\from[url14] (FR)
 
   {\em Specialization in Computer, Network Sciences}
 \stopdescription
 
 \startdescription{2015 - 2016}
   {\bf Erasmus student exchange};
-  \useURL[url14][https://www.cvut.cz/en][][Czech Technical University in
-  Prague]\from[url14] (CZ)
+  \useURL[url15][https://www.cvut.cz/en][][Czech Technical University in
+  Prague]\from[url15] (CZ)
 
   {\em 1 semester : MSc classes taught in English at the Faculty of
   Information Technologies}
@@ -218,15 +233,15 @@ studio network.
 
 \startdescription{2011 - 2013}
   {\bf 2-year Initial Engineering Course};
-  \useURL[url15][https://www.telecom-st-etienne.fr/][][Télécom
-  Saint-Étienne]\from[url15] (FR)
+  \useURL[url16][https://www.telecom-st-etienne.fr/][][Télécom
+  Saint-Étienne]\from[url16] (FR)
 
   {\em Double diploma course : Technological Degree in Electronics and
   Computer Engineering, University Diploma in Initial Cycle of
   Information Technologies of St-Etienne}
 \stopdescription
 
-\subsection[skills]{Skills}
+\subsection[title={Skills},reference={skills}]
 
 \startdescription{Programming Languages}
   \startitemize[packed]
@@ -268,7 +283,7 @@ studio network.
   \stopitemize
 \stopdescription
 
-\subsection[others]{Others}
+\subsection[title={Others},reference={others}]
 
 \startitemize
 \item
@@ -293,7 +308,7 @@ studio network.
 \thinrule
 
 \startblockquote
-\useURL[url16][mailto:martin.piegay@telecom-st-etienne.fr][][martin.piegay@telecom-st-etienne.fr]\from[url16]
+\useURL[url17][mailto:martin.piegay@telecom-st-etienne.fr][][martin.piegay@telecom-st-etienne.fr]\from[url17]
 • +33 6 25 97 03 83 • 24 years old\crlf
 - Lyon, France
 \stopblockquote
